--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
       <span class="text-muted">Place study well and do this demo.</span>
     </div>
   </footer>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
-  <script src="./js/main.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js"></script>
+  <script src="./js/sync.js"></script>
+  <script src="./js/grid.js"></script>
 </body>
 
 </html>
