--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
       <h5 style="text-align: center;" class="game--title">(<span style="color:red" id="mainCounter2">0</span> all / <span style="color:red" id="mainCounter3">0</span> not synced)  Records in DB Trans</h5>
     
     
-      <div id="example"  style="margin: 50px 600px;">
+      <div id="example"  style="margin: 50px 50px;left: 18%;position: relative;">
       <label>GUID</label><input id='guidTXT' type="text"></input>
       <label>TOKEN</label><input id='tokenTXT'  type="text"></input>
       <label>entityId</label><input id='entityIdTXT'  type="text"></input>
       <button type="button" onclick="setup($('#guidTXT').val(),$('#tokenTXT').val(),$('#entityIdTXT').val())" class="btn btn-primary">Setup</button>
       </div>
-    <div id="example"  style="margin: 50px 750px;">
+    <div id="example"  style="margin: 50px 50px;left: 34%;position: relative;">
     <label>Table Name</label>
     <select id='tableNameDDL'>
     <option id="admin_preference">admin_preference</option>
@@ -95,15 +95,9 @@
     <option id="journey_flow_setting">journey_flow_setting</option>
     <option id="journey_flow_user_type">	journey_flow_user_type</option>
     <option id="journey_setting">	journey_setting</option>
+    <option id="journey_flow_diagram">	journey_flow_diagram</option>
     <option id="kiosks">kiosks</option>
-    <option id="kiosk_serials">kiosk_serials</option>
     <option id="kiosk_setting">kiosk_setting</option>
-    <option id="migrations">migrations</option>
-    <option id="oauth_access_tokens">oauth_access_tokens</option>
-    <option id="oauth_auth_codes">oauth_auth_codes</option>
-    <option id="oauth_clients">oauth_clients</option>
-    <option id="oauth_personal_access_clients">oauth_personal_access_clients</option>
-    <option id="oauth_refresh_tokens">oauth_refresh_tokens</option>
     <option id="roles">roles</option>
     <option id="scans">scans</option>
     <option id="scan_data_types">scan_data_types</option>
